[package]
name = "tauri-shutdown"
version = "1.0.0"
description = "Lightweight system shutdown scheduler"
authors = ["Manas Kushwaha"]
edition = "2021"

[lib]
name = "tauri_shutdown_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
